Fixed alignment of login page
Fixed alignment of the text on the login page

--- a/app/static/login.css
+++ b/app/static/login.css
@@ -12,8 +12,8 @@ body {
     background-color: var(--white);
 }
 
-#loginText {
-    padding-top: 10px;
+#main {
+    padding-top: 50px;
 }
 
 #username, #password {
@@ -32,8 +32,4 @@ body {
 
 #pressLogin:hover {
     background-color: var(--navy);
-}
-
-#sideImage {
-    padding-top: 50px;
 }
